Intermediate results.